--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,6 @@
-# Created by .ignore support plugin (hsz.mobi)
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# IntelliJ project files
 .idea
+*.classpath
+*.project
 *.iml
-out
-gen
-
-# Eclipse project files
-.settings
-bin
-.classpath
-.project
+/out/
+/bin/
